--- a/accounts/templates/organization_dashboard.html
+++ b/accounts/templates/organization_dashboard.html
@@ -92,6 +92,7 @@
             <li><a href="{% url 'organization_player_list' %}">Manage/Add Player</a></li>
             <li><a href="{% url 'form:list_forms' %}">Create/assign Forms</a></li>
             <li><a href="{% url 'staff_register_org' %}">manage/Add Staff</a></li>
+            <li><a href="{% url 'teams_dashboard' %}">Team Management</a></li>
         </ul>
     </div>
 
